--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -20,6 +20,7 @@
 @import "components/drawer";
 @import "components/sidebar";
 @import "components/tableMenu";
+@import "components/drawerDB";
 
 @import "pages/home";
 @import "pages/shop";
