--- a/src/assets/styles/scss/pages/_addProduct.scss
+++ b/src/assets/styles/scss/pages/_addProduct.scss
@@ -7,6 +7,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+
+    @media screen and (max-width: 600px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__btn {
