--- a/src/assets/styles/scss/pages/_messageDB.scss
+++ b/src/assets/styles/scss/pages/_messageDB.scss
@@ -4,6 +4,13 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 
+    @media screen and (max-width: 900px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media screen and (max-width: 600px) {
+      grid-template-columns: 1fr;
+    }
+
     &__item {
       box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
         rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
