--- a/src/assets/styles/scss/components/_footer.scss
+++ b/src/assets/styles/scss/components/_footer.scss
@@ -72,6 +72,10 @@
       font-weight: 500;
       text-transform: uppercase;
       letter-spacing: 2px;
+
+      & a {
+        color: $primary-color;
+      }
     }
   }
 }
