--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -260,3 +260,24 @@ h6 {
   justify-content: center;
   align-items: center;
 }
+
+.fileLabel {
+  height: 80px;
+  width: 100%;
+  max-width: 400px;
+  background-color: #fa52301c;
+  border-radius: 10px;
+  border: 1px dashed #fa5230aa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-align: center;
+  flex-direction: column;
+  gap: 5px;
+  color: #fa5230;
+
+  & span {
+    font-size: 12px;
+  }
+}
